fix: adjust lang selector background color of dark mode

--- a/packages/blocks/src/code-block/components/style.css
+++ b/packages/blocks/src/code-block/components/style.css
@@ -2,7 +2,7 @@ lang-list {
   display: flex;
   flex-direction: column;
   position: absolute;
-  background: white;
+  background: var(--affine-popover-background);
   border-radius: 10px;
   top: 24px;
   z-index: 1;
